# Ground-Station

./: .gitignore  .pre-commit-config.yaml  README.md  WINNING_LIVE.md  pyproject.toml  requirements.txt  setup.py
cure-ground/: main.py  retrieveData.py
cure-ground/cli/: main.py
cure-ground/dev_serial_flash_dump/: README.md
cure-ground/protocols/commands/: commands_v01.py
cure_ground/: __init__.py  cli.py  retrieveData.py
cure_ground/cli/: aa_graph.py  main.py  post_flight.py
cure_ground/core/: __init__.py
cure_ground/core/functions/: __init__.py  flash_dump.py  parse_radio_headers.py  ping.py  versions.py
cure_ground/core/protocols/: __init__.py
cure_ground/data_sources/: .RadioDataSource.py.un~  CSVDataSource.py  DataSource.py  DataSourceFactory.py  LaunchDetector.py  RadioDataSource.py  RadioDataSource.py~  SerialDataSource.py  __init__.py  timestamp_utils.py
cure_ground/dev_serial_flash_dump/: README.md  gen_graphs.py  main.py  pressure_time.py
cure_ground/gui/: get_status.py  main.py
cure_ground/gui/control/: DashboardController.py  __init__.py
cure_ground/gui/model/: CSVDataSource.py  DataSource.py  RocketModel.py  SerialConnection.py  StatusModel.py  __init__.py
cure_ground/gui/simulations/: dynamic_packetloss_test.py
cure_ground/gui/view/: .MainWindow.py.swp  AltitudeGraph.py  Graphs.py  (+12 more)
hybrid-wireless-system/: README 2.md  README.md  readme.txt
hybrid-wireless-system/ground-control-side/: data_handler.py  main.py  system_handler.py  system_vars.py
hybrid-wireless-system/pad-side/: platformio.ini
pad-side-mc-2/src/: main.cpp
(+62 files in other folders)
